--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-template",
+  "name": "@zimtsui/json-rpc",
   "version": "0.0.1",
   "description": "",
   "main": "./build/index.js",
